# CROW-Client

./: README.md  pyproject.toml
docs/: package.md
src/client/communication/: web_sockets.py
src/client/exec_handling/: executor.py
src/client/helper/: types.py
src/websocket_communication/: websocket.py
