[project]
name = "crow-client"
version = "0.0.0"
description = "CROW-Client"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "asyncio>=4.0.0",
    "websockets>=16.0",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.20.0",
  "ruff>=0.15.8",
  "pre-commit>=4.5.1",
  "build>=1.4.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/client"]

[tool.setuptools.packages.find]
where = ["src"]
